--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
       <div data-previous-operand class="previous-operand"></div>
       <div data-current-operand class="current-operand"></div>
     </div>
-    <button data-all-clear class="span-two">AC</button>
-    <button data-delete>DEL</button>
+    <button data-all-clear>AC</button>
+    <button data-delete>C</button>
+    <button data-operation>*</button>
     <button data-operation>÷</button>
     <button data-number>1</button>
     <button data-number>2</button>
     <button data-number>3</button>
-    <button data-operation>*</button>
     <button data-number>4</button>
     <button data-number>5</button>
     <button data-number>6</button>
@@ -31,7 +31,8 @@
     <button data-operation>-</button>
     <button data-number>.</button>
     <button data-number>0</button>
-    <button data-equals class="span-two">=</button>
+    <button data-operation>%</button>
+    <button data-equals class="span-two" style="background-color='#33D5FF'">=</button>
   </div>
 </body>
 </html>
