--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <button data-number>7</button>
     <button data-number>8</button>
     <button data-number>9</button>
-    <button data-equals rowspan=2 style="background-color='#33D5FF'";>=</button>
     <button data-number>.</button>
     <button data-number>0</button>
     <button data-operation>%</button>
+    <button data-equals rowspan=2 style="background-color:#33D5FF";>=</button>
   </div>
 </body>
 </html>
