--- a/index.html
+++ b/index.html
@@ -29,10 +29,11 @@
     <button data-number>7</button>
     <button data-number>8</button>
     <button data-number>9</button>
-    <button data-equals class='span-two' style="background-color:#33D5FF">=</button>
+    <button data-operation>%</button>
     <button data-number>.</button>
     <button data-number>0</button>
-    <button data-operation>%</button>
+    <button data-number>00</button>
+    <button data-equals style="background-color:#33D5FF">=</button>
   </div>
 </body>
 </html>
